--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <nav class="menu" aria-label="Menu de navegação">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="cultura.html">História</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="receitas.html">Receitas</a></li>
-          <li><a href="musica.html">Música</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="contato.html">Contato</a></li>
-          <li><a href="comentarios.html">Fórum</a></li>
-          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="indexcultura.html">História</a></li>
+          <li><a href="indexgaleria.html">Galeria</a></li>
+          <li><a href="indexreceitas.html">Receitas</a></li>
+          <li><a href="indexmusica.html">Música</a></li>
+          <li><a href="indexsobre.html">Sobre</a></li>
+          <li><a href="indexcontato.html">Contato</a></li>
+          <li><a href="indexcomentarios.html">Fórum</a></li>
+          <li><a href="indexprofile.html">Perfil</a></li>
         </ul>
       </nav>
     </div>
@@ -54,17 +54,17 @@
     <section id="features" class="container">
       <h3>Destaques</h3>
       <div class="cards">
-        <a href="cultura.html" class="card">
+        <a href="indexcultura.html" class="card">
           <img src="img/quadrilha.jpg" alt="Quadrilha Junina" />
           <h4>Quadrilha Junina</h4>
           <p>Aprenda os passos da dança que anima todo São João.</p>
         </a>
-        <a href="receitas.html" class="card">
+        <a href="indexreceitas.html" class="card">
           <img src="img/comida.jpg" alt="Comidas Típicas" />
           <h4>Comidas Típicas</h4>
           <p>Receitas deliciosas: pamonha, canjica, bolo de milho e muito mais.</p>
         </a>
-        <a href="musica.html" class="card">
+        <a href="indexmusica.html" class="card">
           <img src="img/musica.jpg" alt="Música Regional" />
           <h4>Música Regional</h4>
           <p>Conheça artistas que embalam as festas de Norte a Sul do Brasil.</p>
