--- a/indexcomentarios.html
+++ b/indexcomentarios.html
@@ -12,7 +12,7 @@
 
   <header class="site-header">
     <div class="container header-inner">
-      <h1 class="logo">Festejando</h1>
+      <h1 class="logo"><a href="index.html">Festejando</a></h1>
 
       <div class="accessibility-controls">
         <button id="btn-contrast" aria-label="Alternar modo claro/escuro">🌓</button>
@@ -21,17 +21,21 @@
         <button id="btn-reset" aria-label="Redefinir preferências">⭯</button>
       </div>
 
+      <button class="nav-toggle" aria-label="Abrir menu" aria-expanded="false">
+        <span></span><span></span><span></span>
+      </button>
+
       <nav class="menu" aria-label="Menu principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="cultura.html">História</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="receitas.html">Receitas</a></li>
-          <li><a href="musica.html">Música</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="contato.html">Contato</a></li>
-          <li><a href="comentarios.html">Fórum</a></li>
-          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="indexcultura.html">História</a></li>
+          <li><a href="indexgaleria.html">Galeria</a></li>
+          <li><a href="indexreceitas.html">Receitas</a></li>
+          <li><a href="indexmusica.html">Música</a></li>
+          <li><a href="indexsobre.html">Sobre</a></li>
+          <li><a href="indexcontato.html">Contato</a></li>
+          <li><a href="indexcomentarios.html">Fórum</a></li>
+          <li><a href="indexprofile.html">Perfil</a></li>
         </ul>
       </nav>
     </div>
@@ -49,6 +53,6 @@
     </div>
   </footer>
 
-  <script src="comentarios.js" defer></script>
+  <script src="scriptcomentarios.js" defer></script>
 </body>
 </html>
