--- a/indexobrigado.html
+++ b/indexobrigado.html
@@ -10,7 +10,7 @@
   <main>
     <h1 id="text">Obrigado pelo contato</h1>
     <p id="paragrafo">Em breve entrarei em contato.</p>
-    <a href="contato.html" id="btn">Voltar</a>
+    <a href="index.html" id="btn">Voltar</a>
   </main>
 
   <footer>
