--- a/indexpublicar.html
+++ b/indexpublicar.html
@@ -29,7 +29,7 @@
       <label for="body">Mensagem</label>
       <textarea id="body" rows="5" required></textarea>
       <button type="submit" id="publishBtn">Publicar</button>
-      <a href="comentarios.html" class="button-voltar">Voltar</a>
+      <a href="indexcomentarios.html" class="button-voltar">Voltar</a>
     </form>
   </main>
 <br><br><br>
@@ -39,6 +39,6 @@
     </div>
   </footer>
 
-  <script src="publicar.js" defer></script>
+  <script src="scriptpublicar.js" defer></script>
 </body>
 </html>
