--- a/indexsobre.html
+++ b/indexsobre.html
@@ -27,14 +27,14 @@
       <nav class="menu" aria-label="Menu principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="cultura.html">História</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="receitas.html">Receitas</a></li>
-          <li><a href="musica.html">Música</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="contato.html">Contato</a></li>
-          <li><a href="comentarios.html">Fórum</a></li>
-          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="indexcultura.html">História</a></li>
+          <li><a href="indexgaleria.html">Galeria</a></li>
+          <li><a href="indexreceitas.html">Receitas</a></li>
+          <li><a href="indexmusica.html">Música</a></li>
+          <li><a href="indexsobre.html">Sobre</a></li>
+          <li><a href="indexcontato.html">Contato</a></li>
+          <li><a href="indexcomentarios.html">Fórum</a></li>
+          <li><a href="indexprofile.html">Perfil</a></li>
         </ul>
       </nav>
     </div>
@@ -79,6 +79,6 @@
     </div>
   </footer>
 
-  <script src="sobre.js"></script>
+  <script src="scriptsobre.js"></script>
 </body>
 </html>
