--- a/indexlogin.html
+++ b/indexlogin.html
@@ -22,14 +22,14 @@
       <nav class="menu" aria-label="Menu principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="cultura.html">História</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="receitas.html">Receitas</a></li>
-          <li><a href="musica.html">Música</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="contato.html">Contato</a></li>
-          <li><a href="comentarios.html">Fórum</a></li>
-          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="indexcultura.html">História</a></li>
+          <li><a href="indexgaleria.html">Galeria</a></li>
+          <li><a href="indexreceitas.html">Receitas</a></li>
+          <li><a href="indexmusica.html">Música</a></li>
+          <li><a href="indexsobre.html">Sobre</a></li>
+          <li><a href="indexcontato.html">Contato</a></li>
+          <li><a href="indexcomentarios.html">Fórum</a></li>
+          <li><a href="indexprofile.html">Perfil</a></li>
         </ul>
       </nav>
     </div>
@@ -50,7 +50,7 @@
 
       <button type="submit">Login</button>
     </form>
-    <p>Não tem conta? <a href="signup.html">Cadastrar</a></p>
+    <p>Não tem conta? <a href="indexsignup.html">Cadastrar</a></p>
   </main>
 
   <footer>
@@ -59,6 +59,6 @@
     </div>
   </footer>
 
-  <script src="login.js" defer></script>
+  <script src="scriptlogin.js" defer></script>
 </body>
 </html>
