--- a/indexcontato.html
+++ b/indexcontato.html
@@ -42,6 +42,10 @@
   <main id="main" class="container">
     <section>
       <h2>Contato</h2>
+      <br>
+      <h3>Entre em contato com nossa equipe para enviar sua receita, música ou galeria e fazer parte do nosso site!</h3>
+      <p class="paragrafo1">Tem dúvidas? Estamos aqui para ajudar. Este espaço é totalmente interativo e feito para você. Participe e ajude a construir o futuro deste fórum!</p>
+      <br>
       <form id="form-contato" action="https://api.staticforms.xyz/submit" method="post">
         <label for="name">Nome</label>
         <input type="text" id="name" name="name" placeholder="Digite seu nome" autocomplete="off" required />
