--- a/indexcomentarios.html
+++ b/indexcomentarios.html
@@ -54,6 +54,6 @@
     </div>
   </footer>
 
-  <script src="scriptcomentarios.js" defer></script>
+  <script src="scriptcomentarios.js"></script>
 </body>
 </html>
