--- a/indexsobre.html
+++ b/indexsobre.html
@@ -71,6 +71,7 @@
       <h3>Quem somos</h3>
       <p>
         Olá! Eu sou Jefferson, o criador deste site. Aqui, você vai encontrar um espaço dedicado a compartilhar a rica cultura brasileira, promover conversas e interações entre pessoas que valorizam a história e buscam conexões entre as diversas regiões do Brasil.
+        Você também podera entrar em contato no email jefferson.kreiner@escola.pr.gov.br
       </p>
     </section>
   </main>
