--- a/indexlogin.html
+++ b/indexlogin.html
@@ -24,7 +24,6 @@
           <li><a href="indexcultura.html">História</a></li>
           <li><a href="indexmapa.html">Mapa</a></li>
           <li><a href="indexcalendario.html">Calendario</a></li>
-          <li><a href="indexgaleria.html">Galeria</a></li>
           <li><a href="indexreceitas.html">Receitas</a></li>
           <li><a href="indexmusica.html">Música</a></li>
           <li><a href="indexsobre.html">Sobre</a></li>
@@ -52,6 +51,7 @@
       <button type="submit">Login</button>
     </form>
     <p>Não tem conta? <a href="indexsignup.html">Cadastrar</a></p>
+    <p>Criar uma conta significa que você aceitara nosso <a href="indextermo.html">Termo de Uso</a></p>
   </main>
 
   <footer>
