--- a/indexprofile.html
+++ b/indexprofile.html
@@ -25,7 +25,6 @@
           <li><a href="indexcultura.html">História</a></li>
           <li><a href="indexmapa.html">Mapa</a></li>
           <li><a href="indexcalendario.html">Calendario</a></li>
-          <li><a href="indexgaleria.html">Galeria</a></li>
           <li><a href="indexreceitas.html">Receitas</a></li>
           <li><a href="indexmusica.html">Música</a></li>
           <li><a href="indexsobre.html">Sobre</a></li>
@@ -68,7 +67,7 @@
   });
 </script>
 
-
+ <p>Criar uma conta significa que você aceitara nosso <a href="indextermo.html">Termo de Uso</a></p>
     </form>
   </main>
 
